tests/ui/lang-items/start_lang_item_args.missing_sigpipe_arg.stderr
error[E0308]: lang item `start` function has wrong type
  --> $DIR/start_lang_item_args.rs:26:1
   |
LL | fn start<T>(_main: fn() -> T, _argc: isize, _argv: *const *const u8) -> isize {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected signature `fn(fn() -> T, isize, *const *const u8, u8) -> _`
              found signature `fn(fn() -> T, isize, *const *const u8) -> _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
